--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>BenchMock - Practice Interviews with Real Professionals</title>
+  <title>MockI - Practice Interviews with Real Professionals</title>
   <meta name="description"
     content="Transform your interview skills with MockI. Practice with real HR & IT professionals, gain confidence, and land your dream job. Join 500+ successful students." />
   <meta name="author" content="MockI" />
@@ -19,7 +19,7 @@
   <meta property="og:image" content="/media/logo/mocki_log.png" />
   <meta property="og:url" content="https://MockI.com" />
 
-  <link rel="icon" href="/media/logo/mocki_log.png">
+  <link rel="icon" type="image/png" href="/media/logo/mocki_log.png" />
 
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@MockI" />
