--- a/client/index.html
+++ b/client/index.html
@@ -4,29 +4,26 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>BenchMock - Practice Interviews with Real Professionals</title>
+  <title>Mockeefy - Practice Interviews with Real Professionals</title>
   <meta name="description"
-    content="Transform your interview skills with BenchMock. Practice with real HR & IT professionals, gain confidence, and land your dream job. Join 500+ successful students." />
-  <meta name="author" content="BenchMock" />
+    content="Transform your interview skills with Mockeefy. Practice with real HR & IT professionals, gain confidence, and land your dream job. Join 500+ successful students." />
+  <meta name="author" content="Mockeefy" />
   <meta name="keywords"
     content="mock interview, interview practice, job preparation, career coaching, HR training, technical interviews" />
-  <link rel="canonical" href="https://benchmock.com" />
+  <link rel="canonical" href="https://mockeefy.com" />
 
-  <meta property="og:title" content="BenchMock - Your First Interview Shouldn't Be the Real One" />
+  <meta property="og:title" content="Mockeefy - Your First Interview Shouldn't Be the Real One" />
   <meta property="og:description"
-    content="Practice with real HR & IT professionals. Gain confidence. Land your dream job with BenchMock's professional interview training platform." />
+    content="Practice with real HR & IT professionals. Gain confidence. Land your dream job with Mockeefy's professional interview training platform." />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="/media/logo/mocki_log.png" />
-  <meta property="og:url" content="https://benchmock.com" />
-
-  <link rel="icon" type="image/png" href="/media/logo/mocki_log.png" />
+  <link rel="icon" type="image/png" href="/mockeefy.png" />
 
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:site" content="@BenchMock" />
-  <meta name="twitter:title" content="BenchMock - Practice Interviews with Real Professionals" />
+  <meta name="twitter:site" content="@Mockeefy" />
+  <meta name="twitter:title" content="Mockeefy - Practice Interviews with Real Professionals" />
   <meta name="twitter:description"
     content="Transform your interview skills with real HR & IT professionals. Join 500+ successful students." />
-  <meta name="twitter:image" content="/media/logo/mocki_log.png" />
+  <meta name="twitter:image" content="/mockeefy.png" />
 </head>
 
 <body>
