--- a/client/index.html
+++ b/client/index.html
@@ -13,15 +13,15 @@
   <link rel="canonical" href="https://mockeefy.com" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;500;700;800&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;500;700;800&display=block" rel="stylesheet" />
 
   <meta property="og:title" content="Mockeefy - Your First Interview Shouldn't Be the Real One" />
   <meta property="og:description"
     content="Practice with real HR & IT professionals. Gain confidence. Land your dream job with Mockeefy's professional interview training platform." />
   <meta property="og:type" content="website" />
-  <link rel="icon" type="image/png" sizes="32x32" href="/mockeefy-fav.png?v=3" />
-  <link rel="icon" type="image/png" sizes="192x192" href="/mockeefy-fav.png?v=3" />
-  <link rel="apple-touch-icon" href="/mockeefy-fav.png?v=3" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/mockeefy-newdata.png?v=4" />
+  <link rel="icon" type="image/png" sizes="300x300" href="/mockeefy-newdata.png?v=4" />
+  <link rel="apple-touch-icon" href="/mockeefy-newdata.png?v=4" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@Mockeefy" />
   <meta name="twitter:title" content="Mockeefy - Practice Interviews with Real Professionals" />
